# swagger-output.json
@@ -90,5 +90,41 @@
       }
     }
   },
+  "/study/applicaion": {
+    "get": {
+
+    },
+    "post": {
+      "tags": ["/auth/nickname"],
+      "description": "닉네임 등록",
+      "parameters": [
+        {
+          "name": "obj",
+          "in": "body",
+          "schema": {
+            "type": "object",
+            "properties": {
+              "email": {
+                "type": "string",
+                "example": "abc@gmail.com"
+              },
+              "nickName": {
+                "type": "string",
+                "example": "abc"
+              }
+            }
+          }
+        }
+      ],
+      "responses": {
+        "409":{
+          "description": "Conflict"
+        },
+        "500":{
+          "description": "Internal Server Error"
+        }
+      }
+    }
+  },
   "definitions": {}
 }
